--- a/src/components/link-button/index.less
+++ b/src/components/link-button/index.less
@@ -1,11 +1,9 @@
 .link-button{
   outline: none;
   border: none;
-  width: 50px;
-  height: 30px;
   background-color: transparent;
   color: blue;
-
+  cursor: pointer
 
 
 
